2003-03-07  Gary Thomas  <gary@mlbassoc.com>

	* include/plf_stub.h: Remove [confusing] platform specific include.

2003-03-04  Paul Fine <pfine@delcomsys.com>
	
	* cdl/hal_powerpc_vads.cdl: Now that the cache control macros
	are correct and quicc2 ethernet driver has been fixed with respect
	to caching operations, allow the cache, and MMU, to be enabled at
	startup.

2002-12-12  Gary Thomas  <gthomas@ecoscentric.com>
2002-12-12  Patrick Doyle <wpd@delcomsys.com>

	* src/vads.S: 
	* src/hal_diag.c: 
	* src/hal_aux.c: 
	* misc/redboot_ROMRAM.ecm: 
	* misc/redboot_ROM.ecm: 
	* misc/redboot_RAM.ecm: 
	* include/pkgconf/mlt_powerpc_vads_romram.ldi: 
	* include/pkgconf/mlt_powerpc_vads_romram.h: 
	* include/pkgconf/mlt_powerpc_vads_romlow.ldi: 
	* include/pkgconf/mlt_powerpc_vads_romlow.h: 
	* include/pkgconf/mlt_powerpc_vads_romhigh.ldi: 
	* include/pkgconf/mlt_powerpc_vads_romhigh.h: 
	* include/pkgconf/mlt_powerpc_vads_rom.mlt: 
	* include/pkgconf/mlt_powerpc_vads_ram.mlt: 
	* include/pkgconf/mlt_powerpc_vads_ram.ldi: 
	* include/pkgconf/mlt_powerpc_vads_ram.h: 
	* include/plf_stub.h: 
	* include/plf_intr.h: 
	* include/plf_cache.h: 
	* include/hal_diag.h: 
	* cdl/hal_powerpc_vads.cdl: New package - support for Motorola
	Voyager (VADS) MPC8260 board.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
// Copyright (C) 2002 Gary Thomas
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or